# llm-playground

./: .gitignore  Makefile  README.md  package-lock.json  pyproject.toml
apis/demo-speech-to-speech/: README.md  package-lock.json  package.json
apis/demo-speech-to-speech/src/: App.js
apis/speech-to-speech/: README.md  package-lock.json
apis/speech-to-text/: README.md  invoke.sh  sync-request.json
generative-ui/: README.md
generative-ui/generative-ui-kusagi/: package.json  pnpm-lock.yaml
generative-ui/generative-ui-kusagi/src/app/: actions.tsx  page.tsx
generative-ui/generative-ui-kusagi/src/app/components/: Stock.tsx
ollama/: .gitignore  README.md
rag/cohere/: README.md
rag/kendra-bedrock/: README.md  pyproject.toml
rag/kendra-bedrock/kendra_bedrock/: app.py
src/function-calling/: README.md  main.py  sheets.py
