[tool.poetry]
name = "llm-playground"
version = "0.1.0"
description = ""
authors = ["KazuSh1geru"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.51.2"
ruff = "^0.6.9"
black = "^24.10.0"
google-auth-oauthlib = "^1.2.1"
google-api-python-client = "^2.149.0"
google-auth = "^2.35.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
